Fix Center Alignment

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -21,10 +21,6 @@
   color: #ceae72;
 }
 
-.container {
-   text-align: center;
- }
-
 .container pre {
   display: inline-block;
   text-align: left;
